First code for theme_matlab()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(geom_tufteboxplot)
 export(ggthemes_data)
 export(hc_pal)
 export(palette_pander)
+export(post_matlab)
 export(ptol_pal)
 export(scale_color_calc)
 export(scale_color_canva)
@@ -108,6 +109,7 @@ export(theme_gdocs)
 export(theme_hc)
 export(theme_igray)
 export(theme_map)
+export(theme_matlab)
 export(theme_pander)
 export(theme_par)
 export(theme_solarized)
